# AoC2020

AoC2020/day1/: CMakeLists.txt  main.cpp  rebar.config
AoC2020/day1/lib/: solution.ex
AoC2020/day1/src/: day1.erl
AoC2020/day10/: CMakeLists.txt  main.cpp
AoC2020/day11/: CMakeLists.txt  main.cpp
AoC2020/day12/: CMakeLists.txt  main.cpp
AoC2020/day14/: CMakeLists.txt  main.cpp
AoC2020/day15/: CMakeLists.txt  main.cpp
AoC2020/day18/: ALexer.g4  AParser.g4  AParser2.g4  CMakeLists.txt  generate.cmd  main.cpp  parser.h  parser2.h
AoC2020/day3/: CMakeLists.txt  main.cpp
AoC2020/day4/: CMakeLists.txt  main.cpp
AoC2020/day6/day6/: Program.fs  day6.fsproj  day6.sln
AoC2020/day7/: CMakeLists.txt  main.cpp
AoC2020/day8/: CMakeLists.txt  main.cpp
AoC2020/day9/: CMakeLists.txt  main.cpp
